--- a/inicio.html
+++ b/inicio.html
@@ -37,9 +37,10 @@
       <div class="mb-3" id="entrarLobbyForm" style="display: none;">
         <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
         <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
-        
         <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
-     
+        <script>
+        redirect("lobby/lobby.html");
+        </script>
       </div>
       <div class="mb-3" id="criarLobbyForm" style="display: none;">
       <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
