--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -21,6 +21,7 @@
 <body>
   <div class="container">
     <h1 id="lobbyName">Lobby</h1>
+    <p id="lobbyadm" class="fw-bold">ADM: </p>
     <p id="lobbyDescription"></p>
     <p id="lobbyId" class="fw-bold">ID: </p>
     <h2>Jogadores</h2>
