--- a/inicio.html
+++ b/inicio.html
@@ -37,8 +37,8 @@
       <div class="mb-3" id="entrarLobbyForm" style="display: none;">
         <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
         <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
-        <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
-        <button type="goToLobby" class="btn btn-primary" onclick="redirect(/lobby/lobby.html)" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
+        <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
+        <button type="goToLobby" class="btn btn-primary" onclick="redirect(/lobby/lobby.html)" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby 2</button>
        
        <script>
           
