--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -26,10 +26,14 @@
     <p id="lobbyId" class="fw-bold">ID: </p>
     <h2>Jogadores</h2>
     <ul id="playersList" class="list-group"></ul>
+
+    <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="lobby.js"></script>
+  <script src="/scripts.js"></script>
+
 </body>
 
 </html>
