--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -28,7 +28,7 @@
     <ul id="playersList" class="list-group"></ul>
 
     <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
-    <button type="goOutLobby" class="btn btn-primary" onclick="SairdoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Sair do Lobby</button>
+    <button type="goOutLobby" class="btn btn-primary" onclick="removerUsuarioDoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Sair do Lobby</button>
   
   </div>
 
