--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -30,6 +30,7 @@
     <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
     <button type="goOutLobby" class="btn btn-primary" onclick="removerUsuarioDoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Sair do Lobby</button>
     <button type="goToPlay" class="btn btn-primary" onclick = "comecarPartida()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Começar partida</button>
+    <button type="goToVoltar" class="btn btn-primary" onclick = "voltarLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Voltar pro Lobby</button>
 
   </div>
 
